feat: archive platform integration round
